monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0808/A0808.java
/* (c) https://github.com/MontiCore/monticore */
public public constructor(){}
